# cylixin

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cylixin_compiler/: Cargo.toml  runtime.c  test_inkwell.rs
cylixin_compiler/code_examples/: demo.cyx  read-test.cyx
cylixin_compiler/src/: ast.rs  lexer.rs  main.rs  parser.rs  token.rs
cylixin_compiler/src/ast/: mod.rs
cylixin_compiler/src/codegen/: compiler.rs  expressions.rs  mod.rs
cylixin_compiler/src/lexer/: lexer.rs  mod.rs  token.rs
cylixin_compiler/src/parser/: mod.rs  parser.rs
docs/: architecture.md  design_principles.md  syntax.md
src/lexer/src/: main.rs
